# bidsMReye

./: .all-contributorsrc  .codespellrc  .covragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  .readthedocs.yml  .sourcery.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile_dev  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  bidsmreye.py  bidsname.py  codecov.yml  combine.py  config_bidsname.json  config_pybids.json  docker_entrypoint.sh  faq.yml  generalize.py  generate_confounds.py  group.py  long_description.rst  mlc_config.json  prepare_data.py  pyproject.toml  requirements.txt  requirements_dev.txt  (+9 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: check_md_links.yml  docker_build.yml  new_issue.yml  package.yml  system_tests.yml  test_and_coverage.yml  test_demo.yml  test_ds002799.yml  validate_cff.yml
bidsMReye/: bidsname.py  combine.py  generalize.py  prepare_data.py
bidsmreye/: __init__.py  _cli.py  _parsers.py  _version.py  bids_utils.py  bidsmreye.py  bidsutils.py  cli.py  combine.py  config_bidsname.json  configuration.py  defaults.py  download.py  generalize.py  generate_confounds.py  logger.py  methods.py  prepare_data.py  quality_control.py  report.py  run.py  utils.py  visualize.py
bidsmreye/config/: config_bidsname.json  config_pybids.json  default_filter_file.json
bidsmreye/models/: README.md  registry.txt
bidsmreye/templates/: CITATION.bib  CITATION.jinja  CITATION.mustache
bidsmreye/templates/report/: base.html  footer.html  header.html
bidsmreye/wip/: run.py
boutiques/: README.md  bidsmreye.json  bidsmreye_0.4.0.json  invocation.json
data/: dataset_description.json
derivatives/: dataset_description.json
docker/: Dockerfile  Dockerfile_dev  entrypoint.sh
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt  usage.rst
docs/questions/: missing_data.question.md  prepare.question.md  validation.question.md
docs/source/: CHANGELOG.md  FAQ.md  bidsmreye.rst  conf.py  demo.md  index.rst  installation.rst  modules.rst  references.bib  references.rst  usage_notes.rst
questions/: boilerplate.question.md
tests/: __init__.py  conftest.py  test_bids_utils.py  test_bidsmreye.py  test_bidsname.py  test_bidsutils.py  test_combine.py  test_configuration.py  test_download.py  test_generalize.py  test_methods.py  test_parsers.py  test_prepare.py  test_quality_control.py  test_report.py  test_utils.py  test_visualize.py  utils.py
tests/data/: .gitignore
tests/data/bidsmreye/: dataset_description.json
tests/data/bidsmreye/sub-01/func/: sub-01_task-nback_space-MNI152NLin2009cAsym_desc-1to6_confounds.npy  sub-01_task-nback_space-MNI152NLin2009cAsym_desc-bidsmreye_eyetrack.json
tests/data/derivatives/bidsmreye/: dataset_description.json  group_eyetrack.tsv
tests/data/derivatives/bidsmreye/sub-9001/ses-1/func/: sub-9001_ses-1_task-rest_desc-1to6_eyetrack.json
tests/data/derivatives/bidsmreye/sub-9007/ses-1/func/: sub-9007_ses-1_task-rest_desc-1to6_eyetrack.json  sub-9007_ses-1_task-rest_desc-bidsmreye_eyetrack.json
tests/data/derivatives/bidsmreye/sub-9008/ses-1/func/: sub-9008_ses-1_task-rest_desc-1to6_eyetrack.json
tests/data/derivatives/bidsmreye/sub-9013/ses-1/func/: sub-9013_ses-1_task-rest_desc-1to6_eyetrack.json
tests/data/derivatives/bidsmreye/sub-9016/ses-2/func/: sub-9016_ses-2_task-rest_desc-bidsmreye_eyetrack.json
tests/data/derivatives/bidsmreye/sub-9022/ses-2/func/: sub-9022_ses-2_task-rest_desc-1to6_eyetrack.json  sub-9022_ses-2_task-rest_desc-bidsmreye_eyetrack.json
tests/data/ds000201-der/: dataset_description.json  task-rest_eyetrack.json
tests/data/ds000201-der/derivatives/bidsmreye/bidsmreye/: dataset_description.json
tests/data/ds000201-der/derivatives/bidsmreye/bidsmreye/sub-9008/ses-1/func/: sub-9008_ses-1_task-rest_desc-bidsmreye_eyetrack.json
tests/data/ds000201-der/derivatives/bidsmreye/sub-9001/ses-1/func/: sub-9001_ses-1_task-rest_desc-bidsmreye_eyetrack.json
tests/data/ds000201-der/derivatives/bidsmreye/sub-9013/ses-1/func/: sub-9013_ses-1_task-rest_desc-bidsmreye_eyetrack.json
tests/data/ds000201-der/sub-9001/ses-1/func/: sub-9001_ses-1_task-rest_desc-preproc_eyetrack.tsv
tests/data/ds000201-der/sub-9007/ses-1/func/: sub-9007_ses-1_task-rest_desc-preproc_eyetrack.tsv
tests/data/ds000201-der/sub-9008/ses-1/func/: sub-9008_ses-1_task-rest_desc-preproc_eyetrack.tsv
tests/data/ds000201-der/sub-9013/ses-1/func/: sub-9013_ses-1_task-rest_desc-preproc_eyetrack.tsv
tests/data/ds000201-der/sub-9016/ses-2/func/: sub-9016_ses-2_task-rest_desc-preproc_eyetrack.tsv
tests/data/ds000201-der/sub-9022/ses-2/func/: sub-9022_ses-2_task-rest_desc-preproc_eyetrack.tsv
tests/data/synthetic/: dwi.json  participants.tsv
tests/data/synthetic/code/: dwi.bvec
tests/data/synthetic/derivatives/fmriprep/sub-01/ses-01/func/: sub-01_ses-01_task-nback_run-01_space-MNI152NLin2009cAsym_desc-eye_timeseries.json
tests/data/synthetic/sub-01/ses-01/fmap/: sub-01_ses-01_phasediff.json
tests/data/synthetic/sub-02/ses-01/fmap/: sub-02_ses-01_phasediff.json
tests/data/synthetic/sub-03/ses-01/fmap/: sub-03_ses-01_phasediff.json
tests/data/synthetic/sub-04/ses-01/fmap/: sub-04_ses-01_phasediff.json
tests/data/synthetic/sub-05/ses-01/fmap/: sub-05_ses-01_phasediff.json
tools/: create_boutiques_descriptor.py  update_registry.py
