[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "bidsmreye"
description = "bids app using deepMReye to decode eye motion for fMRI time series data"
readme = "README.md"
requires-python = ">=3.8.0"
license = { file="LICENSE" }
authors = [
  { name = "Remi Gau", email = "remi.gau@gmail.com" },
]
keywords = [
    "BIDS",
    "brain imaging data structure",
    "neuroimaging",
    "automated pipeline",
    "MRI",
    "Eyetracking",
    "Machine learning",
    ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "attrs",
    "chevron",
    "deepmreye",
    "kaleido",
    "pooch>=1.6.0",
    "pybids",
    "rich",
    "tqdm",
    "tomli; python_version < '3.11'",
    "keras<3.0.0"
]
dynamic = ["version"]

[project.optional-dependencies]
# also stored in docs/requirements.txt
# to speed up readthedocs build
doc = [
    "faqtory",
    "myst-parser",
    "rstcheck",
    "sphinx",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]
style =[
    "black",
    "codespell",
    "flake8",
    "flake8-docstrings",
    "mypy",
    'types-all',
    'pandas-stubs',
    "pre-commit",
    "sourcery",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = ["bidsmreye[doc,test,style]"]
docs = ["bidsmreye[doc]"]
tests = ["bidsmreye[test]"]

[project.urls]
Homepage = "https://github.com/cpp-lln-lab/bidsMReye"
"Bug Tracker" = "https://github.com/cpp-lln-lab/bidsMReye/issues"

[project.scripts]
bidsmreye = "bidsmreye.bidsmreye:cli"
bidsmreye_model = "bidsmreye.download:cli"

[tool.hatch.build.hooks.vcs]
version-file = "bidsmreye/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["bidsmreye"]

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 90

[tool.codespell]
skip = "*.svg,*.eps,.git,env,*build,.mypy*,outputs,.mypy_cache,moae_fmriprep,bidsmreye/templates/CITATION.bib"
builtin = "clear,rare"
ignore-words-list = "fo,slite"

[tool.vulture]
min_confidence = 70
paths = ["bidsmreye"]
sort_by_size = true

[tool.mypy]
exclude = ['tests/']
plugins = "pydantic.mypy"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    'bids.*',
    "bidsmreye._version"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    'attrs.*',
    "bidsmreye._version",
    'chevron.*',
    'deepmreye.*',
    'nibabel.*',
    'pandas.*',
    'plotly.*',
    'pooch.*',
    'rich.*',
    'scipy.*',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov bidsmreye -ra --strict-config --strict-markers --doctest-modules --showlocals -s -vv --durations=0"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
minversion = "6.0"
xfail_strict = true
testpaths = ["tests"]
log_cli_level = "INFO"
filterwarnings = ["error"]
