[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "Remi Gau", email = "remi.gau@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
    "antspyx<0.5",
    "anywidget",
    "attrs",
    "deepmreye>=0.2.1",
    "jinja2",
    "kaleido",
    "keras<3.0.0",
    "pooch>=1.6.0",
    "pybids",
    "tqdm",
    "tomli; python_version < '3.11'",
    "rich_argparse"
]
description = "bids app using deepMReye to decode eye motion for fMRI time series data"
dynamic = ["version"]
keywords = [
    "BIDS",
    "brain imaging data structure",
    "neuroimaging",
    "automated pipeline",
    "MRI",
    "Eyetracking",
    "Machine learning"
]
license = {file = "LICENSE"}
name = "bidsmreye"
readme = "README.md"
requires-python = ">=3.9.0"

[project.optional-dependencies]
dev = ["bidsmreye[doc,test,style]"]
# also stored in docs/requirements.txt
# to speed up readthedocs build
doc = [
    "faqtory",
    "myst-parser",
    "rstcheck",
    "sphinx",
    "sphinx-argparse",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex"
]
docs = ["bidsmreye[doc]"]
style = ["pre-commit", "sourcery"]
test = ["pytest", "pytest-cov"]
tests = ["bidsmreye[test]"]

[project.scripts]
bidsmreye = "bidsmreye._cli:cli"
bidsmreye_model = "bidsmreye._cli:cli_download"

[project.urls]
"Bug Tracker" = "https://github.com/cpp-lln-lab/bidsMReye/issues"
Homepage = "https://github.com/cpp-lln-lab/bidsMReye"

[tool.black]
line-length = 90

[tool.codespell]
builtin = "clear,rare"
ignore-words-list = "fo,slite"
skip = "*.svg,*.eps,.git,env,*build,.mypy*,outputs,.mypy_cache,moae_fmriprep,bidsmreye/templates/CITATION.bib"

[tool.hatch.build.hooks.vcs]
version-file = "bidsmreye/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["bidsmreye"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
ignore_imports = ["bidsmreye._version"]
root_package = "bidsmreye"

[[tool.importlinter.contracts]]
containers = "bidsmreye"
layers = [
    "_cli",
    "_parsers | bidsmreye",
    "prepare_data | generalize | download",
    "quality_control",
    "visualize",
    "bids_utils",
    "methods",
    "report",
    "utils",
    "configuration",
    "logger",
    "defaults"
]
name = "Layered architecture"
type = "layers"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
enable_error_code = ["redundant-expr", "truthy-bool"]
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"] # TODO
exclude = ['tests/']
no_implicit_optional = true
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
warn_redundant_casts = true
# warn_unreachable = true # TODO
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = ['bids.*', "bidsmreye._version"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    'attrs.*',
    'bids.layout.*',
    "bidsmreye._version",
    'chevron.*',
    'deepmreye.*',
    'nibabel.*',
    'pandas.*',
    'plotly.*',
    'pooch.*',
    'rich.*',
    'scipy.*',
    "rich_argparse"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "-ra --cov bidsmreye --strict-config --strict-markers --doctest-modules --showlocals -s -vv --durations=0"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
filterwarnings = ["error"]
junit_family = "xunit2"
log_cli_level = "INFO"
log_level = "INFO"
minversion = "6.0"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
extend-exclude = ["bidsmreye/_version.py"]
include = [
    "pyproject.toml",
    "bidsmreye/**/*.py",
    "tools/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 90

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [
    "ARG001",
    "ARG002",
    "ERA001",
    "D100",
    "D103",
    "D203",
    "D213",
    "N802",
    "N803",
    "N806",
    "N816",
    "N815",
    "PLR2004",
    "PD003",
    "PGH003",
    "PTH100",
    "PTH107",
    "PTH103",
    "PTH123",
    "SIM115",
    "NPY002",
    # Avoid linter rules conflicting with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PD",
    "PGH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 15
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 10
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 6
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 80
