[metadata]
name = bidsmreye
url = https://github.com/cpp-lln-lab/bidsMReye
download_url = https://github.com/cpp-lln-lab/bidsMReye
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
license = LGPL-3.0
description = bids app using deepMReye to decode eye motion for fMRI time series data
keywords =
    mri
    eyetracking
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides = bidsmreye

[options.entry_points]
console_scripts =
    bidsmreye = bidsmreye.run:main

[options]
tests_require = pytest
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
    sphinx-copybutton
    rstcheck
docs =
    %(doc)s
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
    black >=21
    pre-commit
    sourcery
    mypy
test =
    pytest >=6.2.5
    pytest-cov
tests =
    %(test)s
dev =
    %(doc)s
    %(style)s
    %(test)s

[flake8]
max-line-length = 99
count = True
show-source = True
statistics = True
exclude=
    *build
    .git
    __pycache__
    tests
    _version.py
    versioneer.py
    setup.py
max-complexity = 10
# per-file-ignores =
#     setup.py:E121


[versioneer]
VCS = git
style = pep440
versionfile_source = bidsmreye/_version.py
tag_prefix =
