[metadata]
name = bidsmreye
description = bids app using deepMReye to decode eye motion for fMRI time series data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpp-lln-lab/bidsMReye
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
license = LGPL-3.0
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/cpp-lln-lab/bidsMReye
keywords =
    mri
    eyetracking
provides = bidsmreye

[options]
packages = find:
install_requires =
    attrs
    chevron
    deepmreye
    kaleido
    pooch
    pybids
    rich
    tqdm
python_requires = >=3.8.0, <3.11
include_package_data = True
test_suite = pytest
tests_require = pytest
zip_safe = False

[options.entry_points]
console_scripts =
    bidsmreye = bidsmreye.run:main
    bidsmreye_model = bidsmreye.download:main

[options.extras_require]
dev =
    %(doc)s
    %(style)s
    %(test)s
doc =
    myst-parser
    rstcheck
    sphinx>=2.0
    sphinx-argparse
    sphinx-copybutton
    sphinx-rtd-theme
docs =
    %(doc)s
style =
    black>=21
    flake8>=3.7
    flake8-docstrings>=1.5
    mypy
    pre-commit
    sourcery
styles =
    %(style)s
test =
    pytest>=6.2.5
    pytest-cov
tests =
    %(test)s

[flake8]
max-line-length = 99
count = True
show-source = True
statistics = True
exclude =
    *build
    .git
    __pycache__
    tests/*
    _version.py
    versioneer.py
max-complexity = 10
per-file-ignores =
    setup.py:E121

[versioneer]
VCS = git
style = pep440
versionfile_source = bidsmreye/_version.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-bidsmreye._version]
ignore_errors = True

[mypy-rich.*]
ignore_missing_imports = True

[mypy-chevron.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-attrs.*]
ignore_missing_imports = True

[mypy-bids.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-deepmreye.*]
ignore_missing_imports = True

[mypy-pooch.*]
ignore_missing_imports = True

[mypy-pkg_resources.*]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov bidsmreye -ra -vv

[coverage:run]
branch = True
omit = *_version.py

[coverage:report]
show_missing = True
skip_covered = True
omit = *_version.py
