[metadata]
name = bidsmreye
description = bids app using deepMReye to decode eye motion for fMRI time series data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpp-lln-lab/bidsMReye
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
license = LGPL-3.0
license_file = LICENSE
platforms = OS Independent # adapt given that untested on windows and problematic on Mac M1
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
download_url = https://github.com/cpp-lln-lab/bidsMReye
keywords =
    BIDS
    brain imaging data structure
    neuroimaging
    automated pipeline
    MRI
    Eyetracking
    Machine learning
provides = bidsmreye

[options]
packages = find:
install_requires =
    attrs
    chevron
    deepmreye
    kaleido
    pooch
    pybids
    rich
    tqdm
python_requires = >=3.8.0, <3.11
include_package_data = True
test_suite = pytest
tests_require = pytest
zip_safe = False

[options.entry_points]
console_scripts =
    bidsmreye = bidsmreye.bidsmreye:cli
    bidsmreye_model = bidsmreye.download:cli

[options.extras_require]
dev =
    %(doc)s
    %(style)s
    %(test)s
doc =
    faqtory
    myst-parser
    rstcheck
    sphinx
    sphinx-argparse
    sphinx-copybutton
    sphinx-rtd-theme
docs =
    %(doc)s
style =
    black
    codespell
    flake8
    flake8-docstrings
    mypy
    pre-commit
    sourcery
styles =
    %(style)s
test =
    pytest
    pytest-cov
tests =
    %(test)s

[flake8]
max-line-length = 99
count = True
show-source = True
statistics = True
exclude =
    *build
    .git
    __pycache__
    tests/*
    _version.py
    versioneer.py
max-complexity = 10
per-file-ignores =
    setup.py:E121

[versioneer]
VCS = git
style = pep440
versionfile_source = bidsmreye/_version.py
tag_prefix = ''

[mypy]
exclude = ['tests/']
plugins = pydantic.mypy
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy-attrs.*]
ignore_missing_imports = True

[mypy-bids.*]
ignore_errors = True

[mypy-bidsmreye._version]
ignore_errors = True

[mypy-chevron.*]
ignore_missing_imports = True

[mypy-deepmreye.*]
ignore_missing_imports = True

[mypy-nibabel.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-pkg_resources.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-pooch.*]
ignore_missing_imports = True

[mypy-rich.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov bidsmreye -ra -vv

[coverage:run]
branch = True
omit = *_version.py

[coverage:report]
show_missing = True
skip_covered = True
omit = *_version.py
